--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -6,6 +6,8 @@
     <title>Future &dash; Academy | Future of Learning</title>
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/rating.css" />
+    <link rel="stylesheet" href="/css/fontawsome.css" />
+
     <link
       rel="shortcut icon"
       href="/assets/l-favicon.svg"
