--- a/views/course/show.ejs
+++ b/views/course/show.ejs
@@ -44,12 +44,21 @@
             </button>
           </form>
           <% } %> <% if(!currentUser || !currentUser._id
-          .equals(course.author._id) ) { %>
+          .equals(course.author._id) && isAlreadyPurchased == false) { %>
           <form action="/courses/<%= course._id%>/purchase" method="get">
             <button class="card-purchase-btn btn btn-2 purchase-btn">
               Purchase course
             </button>
           </form>
+          <% if(currentUser && !currentUser._id .equals(course.author._id) &&
+          isAlreadyPurchased == true) { %>
+          <form action="/courses/<%= course._id%>/leacture" method="get">
+            <button class="card-purchase-btn btn btn-2 purchase-btn">
+              <strong>Go to course</strong>
+            </button>
+            <% } %>
+          </form>
+
           <!--  <form action="#" method="post">
               <button class="btn btn-2 favourite-btn">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
