--- a/views/error.ejs
+++ b/views/error.ejs
@@ -3,5 +3,8 @@
   <div class="err-pg">
     <img src="/assets/err-logo.gif" class="err-logo" />
     <p class="err-message"><%= err.message %></p>
+    <form action="/courses" method="get">
+      <button class="err-btn"><strong>Home</strong></button>
+    </form>
   </div>
 </body>
