--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -27,7 +27,9 @@
       <a href="#" class="footer-links">FA Bussiness</a>
       <a href="#" class="footer-links">Tech on FA</a>
       <a href="#" class="footer-links">About us</a>
-      <a href="#" class="footer-links">Contact us</a>
+      <a href="mailto:noumansharifgul@gmail.com" class="footer-links"
+        >Contact us</a
+      >
     </div>
     <div class="furture-links footer-link">
       <a href="#" class="footer-links">Career</a>
