adding the files and deleting the previous one

--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -48,7 +48,7 @@
   </div>
 
   <div class="footer-brand-logo">
-    <img src="/assets/logo.jpg" alt="Logo" />
-    <h2>Al Haseeb Institute</h2>
+    <img src="/assets/dark-brand-logo.svg" alt="" />
+    <h2>Future Academy</h2>
   </div>
 </footer>
