--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,5 +1,7 @@
 <nav class="nav-bar">
-  <a href="/courses"> <img src="/assets/logo.jpg" class="brand-logo" /></a>
+  <a href="/courses">
+    <img src="/assets/dark-brand-logo.svg" class="brand-logo"
+  /></a>
   <a href="/courses" class="nav-element categories">Home</a>
 
   <!-- search-bar -->
