--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -3,12 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Al-Haseeb Institute | Online Quran Academy</title>
+    <title>Future &dash; Academy | Future of Learning</title>
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/rating.css" />
     <link rel="stylesheet" href="/css/fontawsome.css" />
 
-    <link rel="shortcut icon" href="/assets/logo.jpg" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="/assets/l-favicon.svg"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <%- include('../includes/navbar.ejs') %>
